# codex

codex-cli/: package-lock.json  package.json
codex-cli/lib/: provider.js
codex-rs/: Cargo.toml
codex-rs/canvas/: BUILD.bazel  Cargo.toml
codex-rs/canvas/src/: lib.rs  protocol.rs  render.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: canvas_cmd.rs  gateway_cmd.rs  hub_cmd.rs  main.rs  provider_cmd.rs  soul_cmd.rs  voice_cmd.rs
codex-rs/config/src/: lib.rs  provider_config.rs  provider_edit.rs
codex-rs/core/src/: provider.rs
codex-rs/gateway/: Cargo.toml
codex-rs/gateway/src/: adapter.rs  lib.rs  message.rs  router.rs
codex-rs/hub/: BUILD.bazel  Cargo.toml
codex-rs/hub/src/: installer.rs  lib.rs  registry.rs
codex-rs/model-provider-info/src/: custom_provider.rs  lmstudio.rs  minimax.rs  models.rs  provider.rs
codex-rs/soul/: BUILD.bazel  Cargo.toml
codex-rs/soul/src/: lib.rs  soul_md.rs  tools_md.rs
codex-rs/tui/src/: app.rs  chatwidget.rs  cli.rs  keymap.rs  keymap_setup.rs  model_migration.rs  multi_agents.rs  provider_command.rs  resume_picker.rs  slash_command.rs  tooltips.rs  update_prompt.rs
codex-rs/tui/src/app/: config_persistence.rs  event_dispatch.rs  input.rs
codex-rs/tui/src/bottom_pane/: approval_overlay.rs  chat_composer.rs  feedback_view.rs  hooks_browser_view.rs  list_selection_view.rs  memories_settings_view.rs  mod.rs  status_line_setup.rs  status_surface_preview.rs  title_setup.rs
codex-rs/tui/src/bottom_pane/chat_composer/: history_search.rs
codex-rs/tui/src/bottom_pane/snapshots/: codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_additional_permissions_prompt.snap  codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_cross_thread_prompt.snap  codex_tui__bottom_pane__approval_overlay__tests__network_exec_prompt.snap  codex_tui__bottom_pane__list_selection_view__tests__list_selection_footer_note_wraps.snap  codex_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_with_subtitle.snap  codex_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_without_subtitle.snap  (+1 more)
codex-rs/tui/src/chatwidget/: connectors.rs  model_popups.rs  notifications.rs  permission_popups.rs  plugins.rs  provider_info.rs  provider_popup.rs  settings_popups.rs  slash_dispatch.rs  status_surfaces.rs  tool_requests.rs  turn_runtime.rs  windows_sandbox_prompts.rs
codex-rs/tui/src/history_cell/: approvals.rs  mcp.rs  notices.rs  session.rs  tests.rs
codex-rs/tui/src/ide_context/: ipc.rs  prompt.rs
codex-rs/tui/src/keymap_setup/: debug.rs  picker.rs
codex-rs/tui/src/onboarding/: auth.rs  welcome.rs
codex-rs/tui/src/pets/: catalog.rs  image_protocol.rs  picker.rs
codex-rs/tui/src/snapshots/: codex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap  codex_tui__app__tests__clear_ui_header_fast_status_fast_capable_models.snap  codex_tui__model_migration__tests__model_migration_prompt.snap  codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex.snap  codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex_mini.snap  codex_tui__model_migration__tests__model_migration_prompt_gpt5_family.snap
codex-rs/tui/src/status/: card.rs
codex-rs/voice/: BUILD.bazel  Cargo.toml
codex-rs/voice/src/: lib.rs  tts.rs  wake_word.rs
(+44 files in other folders)
