[package]
name = "codex-canvas"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false
name = "codex_canvas"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
