[package]
name = "codex-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false
name = "codex_gateway"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }

codex-app-server-protocol = { workspace = true }
codex-config = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }
