[package]
name = "codex-hub"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false
name = "codex_hub"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-core-skills = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
urlencoding = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
wiremock = { workspace = true }
