[package]
name = "codex-voice"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false
name = "codex_voice"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
